...
            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="Event Name *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_event_name" />

            <EditText
                android:id="@+id/et_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purpleText"
...
            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="Event Description *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_event_description" />



            <EditText
                android:id="@+id/et_event_description"
                android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/cb_limit_waiting_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Limit number of entrants"
                    android:textColor="@color/purpleText" />

                <EditText
...

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="Enable Geolocation Requirement"
                    android:textColor="@color/purpleText"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_geo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@color/purpleText"
                    app:trackTint="@color/white" />
            </LinearLayout>

...
